update page and section headers

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -42,6 +42,14 @@ a.disabled:hover
 
     h1, h2, h3
         margin 0
+        
+.page-header-noborder
+    border-bottom none
+
+.section-header
+    margin-top 20px
+    margin-bottom 10px
+    border-bottom: 1px solid #eee
 
 .row
     margin-bottom 1em
@@ -60,6 +68,7 @@ table th
 
 .page-header small
     margin-left 1em
+    
 
 code
     border 1px solid rgba(0, 0, 0, .075)
