tweaks for resource reporting

--- a/SingularityExecutor/src/main/resources/docker.sh.hbs
+++ b/SingularityExecutor/src/main/resources/docker.sh.hbs
@@ -42,6 +42,24 @@ function handle_signal {
   exit "$exit_code"
 }
 
+function setup_cgroups {
+  if [ -d "/cgroup" ] ;then
+    CGROUPS_DIR="/cgroup"
+  else
+    if [ -d "/sys/fs/cgroup" ] ; then
+      CGROUPS_DIR="/sys/fs/cgroup"
+    else
+      echo "Couldn't find cgroups directory, memory/cpu reporting may be inaccurate for this task"
+      return 0
+    fi
+  fi
+  echo "Adding docker processes to mesos executor cgroup..."
+  subsystems=(memory cpu cpuacct)
+  for s in "${subsystems[@]}" ; do
+    cat $CGROUPS_DIR/$s/mesos/$CGROUPS_GUID/$1/tasks >> $CGROUPS_DIR/$s/mesos/$CGROUPS_GUID/tasks
+  done
+}
+
 DOCKER_IMAGE={{{ envContext.dockerInfo.image }}}
 
 DOCKER_ENV=""
@@ -107,6 +125,10 @@ sudo -E -u {{{ runContext.user }}} docker start -a $cid >> {{{ runContext.logFil
 running=1
 
 setup_signals "$cid" "handle_signal" SIGINT SIGTERM
+
+set +e
+setup_cgroups "$cid"
+set -e
 
 while true; do
   if [ "$running" = "1" ]; then
