--- a/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
@@ -37,7 +37,7 @@
                         {{timestampFromNow updatedAt}}
                     </td>
                     <td class="actions-column hidden-xs">
-                        <a href="{{ appRoot }}/task/{{ taskId.id }}/tail/{{ ../../config.runningTaskLogPath }}" title="Log">
+                        <a href="{{ appRoot }}/task/{{ taskId.id }}/tail/{{ subtituteTaskId ../../taskLogPath taskId.id }}" title="Log">
                             ...
                         </a>
                     </td>
