--- a/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
@@ -50,7 +50,7 @@
                             {{timestampFromNow updatedAt}}
                         </td>
                         <td class="hidden-xs actions-column">
-                            <a href="{{ appRoot }}/task/{{ taskId.id }}/tail/{{ ../../config.runningTaskLogPath }}" title="Log">
+                            <a href="{{ appRoot }}/task/{{ taskId.id }}/tail/{{ substituteTaskId ../../taskLogPath taskId.id }}" title="Log">
                                 ...
                             </a>
                         </td>
