add new variables w/ defaults to config.coffeee

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -27,9 +27,9 @@
             hideNewRequestButton: {{{hideNewRequestButton}}},
             defaultCpus: {{{defaultCpus}}},
             defaultMemory: {{{defaultMemory}}},
-            defaultHealthcheckIntervalSeconds: 5,
-            defaultHealthcheckTimeoutSeconds: 10,
-            defaultDeployHealthTimeoutSeconds: 120,
+            defaultHealthcheckIntervalSeconds: {{{defaultHealthcheckIntervalSeconds}}},
+            defaultHealthcheckTimeoutSeconds: {{{defaultHealthcheckTimeoutSeconds}}},
+            defaultDeployHealthTimeoutSeconds: {{{defaultDeployHealthTimeoutSeconds}}},
             runningTaskLogPath: "{{{ runningTaskLogPath }}}",
             finishedTaskLogPath: "{{{ finishedTaskLogPath }}}",
             slaveHttpPort: {{{slaveHttpPort}}},
