add index mustache config vars

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -30,6 +30,8 @@
             defaultHealthcheckIntervalSeconds: {{{defaultHealthcheckIntervalSeconds}}},
             defaultHealthcheckTimeoutSeconds: {{{defaultHealthcheckTimeoutSeconds}}},
             defaultDeployHealthTimeoutSeconds: {{{defaultDeployHealthTimeoutSeconds}}},
+            runningTaskLogPath: "{{{ runningTaskLogPath }}}",
+            finishedTaskLogPath: "{{{ finishedTaskLogPath }}}",
             slaveHttpPort: {{{slaveHttpPort}}},
             {{#slaveHttpsPort}}
             slaveHttpsPort: {{{slaveHttpsPort}}}
