fix typo in helper name subtituteTaskId -> substitute...

--- a/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
@@ -36,7 +36,7 @@
                     <td class="hidden-xs" data-value="{{ taskId.updatedAt }}">
                         {{timestampFromNow updatedAt}}
                     </td>
-                    <a href="{{ appRoot }}/task/{{ taskId.id }}/tail/{{ subtituteTaskId ../../config.runningTaskLogPath taskId.id }}" title="Log">
+                    <a href="{{ appRoot }}/task/{{ taskId.id }}/tail/{{ substituteTaskId ../../config.runningTaskLogPath taskId.id }}" title="Log">
                         ...
                     </a>
                     <td class="actions-column hidden-xs">
