hidden actions in requestHistoricalTask th

--- a/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
@@ -24,6 +24,9 @@
                     <th class="hidden-xs">
                         {{! Actions }}
                     </th>
+                    <th class="hidden-xs">
+                        {{! Actions }}
+                    </th>
                 </tr>
             </thead>
             <tbody>
