hidden actions in requestActiveTasks th

--- a/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
@@ -12,6 +12,7 @@
                 <th class="hidden-sm hidden-xs">Started</th>
                 <th class="hidden-xs">Updated</th>
                 <th class="hidden-xs"></th>
+                <th class="hidden-xs"></th>
             </tr>
         </thead>
         <tbody>
