--- a/SingularityUI/app/templates/tailLogLines.hbs
+++ b/SingularityUI/app/templates/tailLogLines.hbs
@@ -1,5 +1,5 @@
 {{#if isImage}}
-	<h1>hi</h1>
+	<img src="{{{downloadLink}}}">
 {{else}}
 	{{#each lines}}
 	    <div id='line-{{offset}}' class="line" data-offset="{{ offset }}"><a href='#{{offset}}' class='offset-link'><span class="glyphicon glyphicon-link"></span> </a>{{ data }}</div>
