--- a/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
@@ -40,7 +40,8 @@
                             </span>
                         </td>
                         <td class="hidden-sm hidden-xs">
-                            {{humanizeText lastTaskState}}
+                            {{log lastTaskState}}
+                            <span class="label label-default">{{humanizeText lastTaskState}}</span>
                         </td>
                         <td class="hidden-sm hidden-xs">
                             {{ taskId.deployId }}
