request active tasks

--- a/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
@@ -25,7 +25,7 @@
                         </span>
                     </td>
                     <td class="hidden-sm hidden-xs">
-                        {{humanizeText lastTaskState}}
+                        <span class="label label-{{getLabelClass lastTaskState}}">{{humanizeText lastTaskState}}</span>
                     </td>
                     <td class="hidden-sm hidden-xs">
                         {{ taskId.deployId }}
