--- a/SingularityExecutor/src/main/resources/runner.sh.hbs
+++ b/SingularityExecutor/src/main/resources/runner.sh.hbs
@@ -55,10 +55,10 @@ else
 fi
 
 # execute command
-{{#if shouldChangeUser}}
+{{#ifStringsEqual executorUser user}}
 echo "Executing: sudo -E -u {{{ user }}} {{{ cmd }}} >> ../{{{ logFile }}} 2>&1"
 exec sudo -E -u {{{ user }}} {{{ cmd }}} >> ../{{{ logFile }}} 2>&1
 {{else}}
 echo "Executing: {{{ cmd }}} >> ../{{{ logFile }}} 2>&1"
 exec {{{ cmd }}} >> ../{{{ logFile }}} 2>&1
-{{/if}}
+{{/ifStringsEqual}}
