--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -34,7 +34,7 @@
                         <td>{{ user }}</td>
                     {{/ifInSubFilter}}
                     <td class="actions-column">
-                        {{#ifInSubFilter state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION'}}
+                        {{#ifInSubFilter state 'DECOMMISSIONING,DECOMMISSIONED,STARTING_DECOMMISSION,FROZEN'}}
                             <a data-slave-host="{{ host }}" data-slave-id="{{ id }}" data-state="{{ state }}" data-action="reactivate" title="Reactivate">
                                 <span class="glyphicon glyphicon-new-window"></span>
                             </a>
@@ -42,6 +42,9 @@
                         {{#ifInSubFilter state 'ACTIVE'}}
                             <a data-slave-host="{{ host }}" data-slave-id="{{ id }}" data-state="{{ state }}" data-action="decommission" title="Decommission">
                                 <span class="glyphicon glyphicon-trash"></span>
+                            </a>
+                            <a data-slave-host="{{ host }}" data-slave-id="{{ id }}" data-state="{{ state }}" data-action="freeze" title="Freeze">
+                                <span class="glyphicon glyphicon-stop"></span>
                             </a>
                         {{else}}
                             <a data-slave-host="{{ host }}" data-slave-id="{{ id }}" data-state="{{ state }}" data-action="remove" title="Remove">
