add correct path to static assets

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -19,6 +19,7 @@
     {{/navColor}}
     <script>
         window.config = {
+            staticRoot: "{{{staticRoot}}}",
             appRoot: "{{{appRoot}}}",
             apiDocs: "{{{apiDocs}}}",
             apiRoot: localStorage.getItem("apiRootOverride") || "{{{apiRoot}}}",
