--- a/SingularityUI/app/templates/tasksTable/tasksLbCleaningBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksLbCleaningBody.hbs
@@ -12,7 +12,7 @@
                     <th data-sort-attribute="host">
                         Host
                     </th>
-                    <th data-sort-attribute="rackId">
+                    <th data-sort-attribute="sanitizedRackId">
                         Rack
                     </th>
                     <th data-sort-attribute="instanceNo">
@@ -40,7 +40,7 @@
                         {{host}}
                     </td>
                     <td>
-                        {{rackId}}
+                        {{sanitizedRackId}}
                     </td>
                     <td>
                         {{instanceNo}}
