--- a/SingularityUI/app/templates/tasksTable/tasksDecommissioningBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksDecommissioningBody.hbs
@@ -12,7 +12,7 @@
                     <th data-sort-attribute="host" class="hidden-xs">
                         Host
                     </th>
-                    <th data-sort-attribute="taskId.rackId" class="hidden-xs">
+                    <th data-sort-attribute="taskId.sanitizedRackId" class="hidden-xs">
                         Rack
                     </th>
                     <th data-sort-attribute="cpus" class="visible-lg">
@@ -45,7 +45,7 @@
                             <span class='label label-warning'>DECOMMISSIONING</span>
                         </td>
                         <td class="visible-lg">
-                            {{ taskId.rackId }}
+                            {{ taskId.sanitizedRackId }}
                         </td>
                         <td class="visible-lg">
                             {{ cpus }}
