Revert "sanitize slave host field link"
This reverts commit 31ad2a965241fac181b150d7df7da28c8ad5dfde.

--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -21,7 +21,7 @@
             {{#each data}}
                 <tr>
                     <td>
-                        <a href="{{appRoot}}/tasks/active/{{sanitizeTaskIdField host}}">{{ id }}</a>
+                        <a href="{{appRoot}}/tasks/active/{{ host }}">{{ id }}</a>
                     </td>
                     <td>{{ state }}</td>
                     <td>{{timestampFormatted currentState.timestamp }}</td>
