--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -32,6 +32,7 @@
             defaultDeployHealthTimeoutSeconds: {{{defaultDeployHealthTimeoutSeconds}}},
             runningTaskLogPath: "{{{ runningTaskLogPath }}}",
             finishedTaskLogPath: "{{{ finishedTaskLogPath }}}",
+            commonHostnameSuffixToOmit: "{{{ commonHostnameSuffixToOmit }}}",
             slaveHttpPort: {{{slaveHttpPort}}},
             {{#slaveHttpsPort}}
             slaveHttpsPort: {{{slaveHttpsPort}}}
