--- a/SingularityUI/app/templates/slaves/slave.hbs
+++ b/SingularityUI/app/templates/slaves/slave.hbs
@@ -1,5 +1,5 @@
 {{#if data.length}}
-    <table class="table table-striped">
+    <table class="table table-striped sortable-theme-bootstrap" data-sortable>
         <thead>
             <tr>
                 <th>ID</th>
