--- a/SingularityUI/app/templates/dashboardTable/dashboardStarred.hbs
+++ b/SingularityUI/app/templates/dashboardTable/dashboardStarred.hbs
@@ -2,12 +2,12 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th data-sortable="false">{{! Star column }}</th>
-                <th data-sort-attribute="request.id">Request</th>
-                <th class="hidden-xs" data-sort-attribute="requestDeployState.activeDeploy.timestamp">Requested</th>
-                <th data-sort-attribute="state">Status</th>
-                <th class="visible-lg visible-md" data-sort-attribute="requestDeployState.activeDeploy.user">Deploy user</th>
-                <th class="visible-lg visible-md" data-sort-attribute="request.instances">Instances</th>
+                <th>{{! Star column }}</th>
+                <th>Request</th>
+                <th class="hidden-xs">Requested</th>
+                <th>Status</th>
+                <th class="visible-lg visible-md">Deploy user</th>
+                <th class="visible-lg visible-md">Instances</th>
             </tr>
         </thead>
         <tbody>
@@ -45,8 +45,5 @@
     </tbody>
 </table>
 {{else}}
-<div class="empty-table-message"><p>No starred requests</p></div>   
+<div class="empty-table-message"><p>No starred requests</p></div>
 {{/if}}
-
-
-
