Add new controller, view, and templates. Hooked up routing

--- a/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
@@ -19,7 +19,7 @@
                 {{#each data}}
                     <tr data-id="{{ deployMarker.deployId }}" data-collection="deployHistory">
                         <td>
-                          <a href="{{appRoot}}/deploy/{{ deployMarker.deployId }}">
+                          <a href="{{appRoot}}/request/{{ deployMarker.requestId }}/deploy/{{ deployMarker.deployId }}">
                             {{ deployMarker.deployId }}
                           </a>
                         </td>
