--- a/SingularityUI/app/templates/deployDetail/deployBase.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployBase.hbs
@@ -2,4 +2,9 @@
     {{! Will get overwritten when we render this later on }}
     <div class="page-loader centered cushy"></div>
 </div>
-Hi
+<div class="col-md-12" id="tasks">
+
+</div>
+<div class="col-md-12" id="info">
+
+</div>
