--- a/SingularityUI/app/templates/deployDetail/deployHeader.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployHeader.hbs
@@ -1,22 +1,23 @@
-{{! Part of requestBase }}
+{{! Part of deployBase }}
 <header class='detail-header'>
+    <div class="row">
+        <div class="col-md-8">
+            <h5>
+                <span>
+                    Request <a href="{{appRoot}}/request/{{ data.requestId }}">{{ data.requestId }}</a>
+                </span>
+            </h5>
+        </div>
+    </div>
+
     <div class="row">
         {{! Left side, info }}
         <div class="col-md-8">
-            <h4>
-                <span class="request-state" data-state="{{ data.state }}">
-                    {{humanizeText data.state}}
+            <h3>
+                <span>
+                    {{ data.deployId }}
                 </span>
-
-                <span class="request-type">
-                    {{humanizeText data.type}}
-                </span>
-
-            </h4>
-
-            <h2>
-                {{ data.id }}
-            </h2>
+            </h3>
         </div>
 
         {{! Right side, buttons }}
