Fix getting task json

--- a/SingularityUI/app/templates/deployDetail/deployTasks.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployTasks.hbs
@@ -58,7 +58,7 @@
                             </a>
                         </td>
                         <td class="hidden-xs actions-column">
-                            <a data-action="viewObjectJSON" title="JSON">
+                            <a data-action="viewJSON" title="JSON">
                                 { }
                             </a>
                         </td>
