--- a/SingularityUI/app/templates/deployDetail/deployTasks.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployTasks.hbs
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h2>Associated Tasks</h2>
+    <h2>Historical Tasks</h2>
 </div>
 {{#if data.length}}
     <div class="table-container">
