--- a/SingularityUI/app/templates/deployDetail/deployBase.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployBase.hbs
@@ -2,6 +2,9 @@
     {{! Will get overwritten when we render this later on }}
     <div class="page-loader centered cushy"></div>
 </div>
+<div class="col-md-12" id="activeTasks">
+
+</div>
 <div class="col-md-12" id="tasks">
 
 </div>
