--- a/SingularityUI/app/templates/deployDetail/deployInfo.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployInfo.hbs
@@ -27,7 +27,7 @@
                 <h4>Resources<a data-clipboard-text="CPUs: {{ data.deploy.resources.cpus }} |
                 Memory (Mb): {{ data.deploy.resources.memoryMb }} |
                 Ports: {{ data.deploy.resources.numPorts }}">Copy</a></h4>
-                <p>CPUs: {{ data.deploy.resources.cpus }} | Memory (Mb): {{ data.deploy.resources.memoryMb }} | Ports: {{ data.deploy.resources.numPorts }}
+                <p>CPUs: {{ data.deploy.resources.cpus }} | Memory (MB): {{ data.deploy.resources.memoryMb }} | Ports: {{ data.deploy.resources.numPorts }}
                 </p>
             </div>
         </li>
