Fix active task json

--- a/SingularityUI/app/templates/deployDetail/activeTasks.hbs
+++ b/SingularityUI/app/templates/deployDetail/activeTasks.hbs
@@ -31,7 +31,7 @@
             </thead>
             <tbody>
                 {{#each data}}
-                    <tr data-id="{{ taskId.id }}" data-collection="taskHistory">
+                    <tr data-id="{{ taskId.id }}" data-collection="activeTasks">
                         <td>
                             <span title="{{ taskId.id }}">
                                 <a href="{{appRoot}}/task/{{ taskId.id }}">
