--- a/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
@@ -26,7 +26,9 @@
                         </span>
                     </td>
                     <td class="hidden-sm hidden-xs">
-                        <span class="label label-{{getLabelClass lastTaskState}}">{{humanizeText lastTaskState}}</span>
+                        <span class="label label-{{getLabelClass lastTaskState}}">
+                            {{humanizeText lastTaskState}}
+                        </span>
                     </td>
                     <td class="hidden-sm hidden-xs">
                         {{ taskId.deployId }}
