Apply sortable to dashboard table

--- a/SingularityUI/app/templates/dashboardTable/dashboardStarred.hbs
+++ b/SingularityUI/app/templates/dashboardTable/dashboardStarred.hbs
@@ -1,5 +1,5 @@
 {{#if haveStarredRequests}}
-    <table class="table table-striped">
+    <table class="table table-striped sortable-theme-bootstrap" data-sortable>
         <thead>
             <tr>
                 <th>{{! Star column }}</th>
