--- a/SingularityUI/app/templates/deployDetail/activeTasks.hbs
+++ b/SingularityUI/app/templates/deployDetail/activeTasks.hbs
@@ -40,7 +40,9 @@
                             </span>
                         </td>
                         <td class="hidden-sm hidden-xs">
-                            {{humanizeText lastTaskState}}
+                            <span class="label label-{{getLabelClass lastTaskState}}">
+                                {{humanizeText lastTaskState}}
+                            </span>
                         </td>
                         <td class="hidden-sm hidden-xs">
                             {{ taskId.deployId }}
