Default to pending if no deploy state

--- a/SingularityUI/app/styles/detailHeader.styl
+++ b/SingularityUI/app/styles/detailHeader.styl
@@ -81,6 +81,9 @@
         &[data-state='WAITING']
             color #3374CD
 
+        &[data-state='PENDING']
+            color #3374CD
+
         &[data-state='CANCELING']
             color #F1ED00
 
